--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "file-saver": "^2.0.5",
+    "pinia": "^2.1.6",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +21,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^9.17.0",
+    "file-loader": "^6.2.0",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
